[package]
name = "durer"
version = "0.1.0"
authors = ["Mike <mwalczyk2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.2.1"
bevy_prototype_lyon = "0.1.2"
glam = "0.9.4"
log = "0.4.11"
rand = "0.7.3"
tobj = "2.0.2"
typed_index_derive = "0.1.4"
